fixtures/seed/metadata/objects/Opportunity/fields/Is_Big_Deal__c.field-meta.xml
<CustomField>
    <fullName>Is_Big_Deal__c</fullName>
    <description>Exec review flag: seven-figure deal that is not new business.</description>
    <formula>Amount &gt; 1000000 &amp;&amp; NOT(ISPICKVAL(Type,&quot;New Customer&quot;))</formula>
    <label>Is Big Deal</label>
    <type>Checkbox</type>
</CustomField>