fixtures/seed/metadata/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>Why a deal was lost. Required at Closed Lost so win/loss analysis has data.</description>
    <label>Loss Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>