fixtures/seed/metadata/objects/Opportunity/fields/Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by the Flag_Stale_Negotiation flow when a large negotiation-stage deal has low probability.</description>
    <label>Needs Review</label>
    <type>Checkbox</type>
</CustomField>