fixtures/seed/metadata/objects/Opportunity/fields/Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount__c</fullName>
    <description>Finance: amount after the negotiated discount. Discount is a percent field (50 = 50%).</description>
    <formula>Amount - (Amount * BLANKVALUE(Discount__c, 0) / 100)</formula>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>