fixtures/seed/metadata/objects/Opportunity/validationRules/ClosedLost_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedLost_Requires_Reason</fullName>
    <active>true</active>
    <description>Sales ops: win/loss analysis needs a reason on every lost deal.</description>
    <errorConditionFormula>ISPICKVAL(StageName,&quot;Closed Lost&quot;) &amp;&amp; ISBLANK(Loss_Reason__c)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Enter a loss reason before closing as lost.</errorMessage>
</ValidationRule>