fixtures/seed/metadata/objects/Opportunity/validationRules/ClosedWon_Amount_Naive.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedWon_Amount_Naive</fullName>
    <active>true</active>
    <description>Finance: no deal may be booked as won with zero or negative revenue.</description>
    <errorConditionFormula>ISPICKVAL(StageName,&quot;Closed Won&quot;) &amp;&amp; Amount &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>A Closed Won opportunity must have a positive amount.</errorMessage>
</ValidationRule>