fixtures/seed/metadata/objects/Opportunity/validationRules/ClosedWon_Requires_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedWon_Requires_Amount</fullName>
    <active>true</active>
    <description>Finance: revenue recognition depends on every won deal carrying a real amount.</description>
    <errorConditionFormula>ISPICKVAL(StageName,&quot;Closed Won&quot;) &amp;&amp; (ISBLANK(Amount) || Amount &lt;= 0)</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>A Closed Won opportunity must have a positive amount.</errorMessage>
</ValidationRule>