fixtures/seed/metadata/objects/Opportunity/validationRules/Discount_Cap.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Cap</fullName>
    <active>true</active>
    <description>Finance policy: maximum self-serve discount is 50 percent.</description>
    <errorConditionFormula>Discount__c &gt; 50</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Discounts above 50% require a separate approval; enter 50 or less.</errorMessage>
</ValidationRule>