fixtures/seed/metadata/objects/Opportunity/validationRules/EMEA_Requires_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Requires_Amount</fullName>
    <active>true</active>
    <description>EMEA partner routing needs an amount at creation to pick the partner tier.</description>
    <errorConditionFormula>ISPICKVAL(Region__c,&quot;EMEA&quot;) &amp;&amp; ISBLANK(Amount)</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>EMEA opportunities must carry an amount at creation.</errorMessage>
</ValidationRule>