fixtures/seed/metadata/objects/Opportunity/validationRules/Large_Deal_Type_Guard.validationRule-meta.xml
<ValidationRule>
    <fullName>Large_Deal_Type_Guard</fullName>
    <active>true</active>
    <description>Exec review: every seven-figure deal is routed as new business regardless of account history.</description>
    <errorConditionFormula>Amount &gt; 1000000 &amp;&amp; NOT(ISPICKVAL(Type,&quot;New Customer&quot;))</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>Deals over $1M must be typed as New Customer for exec review.</errorMessage>
</ValidationRule>