fixtures/seed/metadata/objects/Opportunity/validationRules/Negotiation_Min_Probability.validationRule-meta.xml
<ValidationRule>
    <fullName>Negotiation_Min_Probability</fullName>
    <active>true</active>
    <description>Forecasting: negotiation-stage deals below 50% distort the weighted pipeline.</description>
    <errorConditionFormula>ISPICKVAL(StageName,&quot;Negotiation/Review&quot;) &amp;&amp; Probability &lt; 50</errorConditionFormula>
    <errorDisplayField>Probability</errorDisplayField>
    <errorMessage>Deals in Negotiation/Review must have probability of at least 50%.</errorMessage>
</ValidationRule>