fixtures/seed/metadata/objects/Opportunity/validationRules/Stage_Regression_Blocked.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_Regression_Blocked</fullName>
    <active>true</active>
    <description>Revenue integrity: booked deals are immutable; a reopened deal must be cloned instead.</description>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;) &amp;&amp; NOT(ISPICKVAL(StageName,&quot;Closed Won&quot;))</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>A Closed Won opportunity cannot be reopened; clone it instead.</errorMessage>
</ValidationRule>